# CTesseract

./: .gitignore  CMakeLists.txt  README.md  README.txt  build_so.sh  build_test.sh  ctess_main.cpp  ctess_main.h  ctess_mr_iterator.cpp  ctess_mr_iterator.h  ctess_page_iterator.cpp  ctess_page_iterator.h  ctess_string.cpp  ctess_string.h  ctesseract.so.1.0  test  test.cpp
include/ctess_api/: ctess_main.h  ctess_mr_iterator.h  ctess_page_iterator.h  ctess_string.h  ctess_types.h
include/ctesseract/: ctess_main.h  ctess_mr_iterator.h  ctess_page_iterator.h  ctess_string.h  ctess_types.h
test/: CMakeLists.txt  ctesseract_test.c  ctesseract_test.cpp
